# vanipy

./: README.md  pyproject.toml
tests/: test_cli.py
vanipy/: __init__.py  query.py  result.py  vanity.py
