[tool.poetry]
name = "vanipy"
version = "0.1.0"
description = "A tool for very superficial Algorand addresses."
authors = ["Manuel Mauro <manuel.mauro@algorand.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
vanipy = "vanipy:vanipy"

[tool.poetry.dependencies]
python = "^3.10"
py-algorand-sdk = "1.20.0"
click = "8.1.3"
rich = "12.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.0"
yapf = "0.32.0"
toml = "0.10.2"

[tool.yapfignore]
ignore_patterns = [
  ".venv/**/*.py"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
